Fix unneeded scrollbar.

--- a/PHASE_2/APPLICATION_SourceCode/stage_2_web_application_final/src/index.css
+++ b/PHASE_2/APPLICATION_SourceCode/stage_2_web_application_final/src/index.css
@@ -1,7 +1,11 @@
 #root {
 }
 
-#root, html, body {
+#html {
+  overflow-y: auto;
+}
+
+#root, body {
   height: 100%;
   overflow: auto;
   margin: 0;
